modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/container-duplicates/rendered/test_samples/pods/001-example-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed
    namespace: testns
spec:
    containers:
        - env:
            - name: foo
              value: bar
            - name: gr
              value: fr
          image: nginx
          name: nginx
        - image: bar
          name: foo
