modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/container-duplicates/rendered/test_samples/pods/003-example-allowed-envs-same-name-diff-containers.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed
    namespace: testns
spec:
    containers:
        - env:
            - name: key1
              value: val1
          image: nginx
          name: nginx1
        - env:
            - name: key1
              value: val2
          image: nginx
          name: nginx2
