modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/container-duplicates/rendered/test_samples/pods/005-example-allowed-init-envs-same-name-diff-containers.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-init-envs-same-name-diff-containers
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    initContainers:
        - env:
            - name: key1
              value: val1
          image: nginx
          name: init-1
        - env:
            - name: key1
              value: val2
          image: nginx
          name: init-2
