modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/container-duplicates/rendered/test_samples/pods/006-example-disallowed-init-envs-same-name-same-container.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-init-envs-same-name-same-container
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    initContainers:
        - env:
            - name: key1
              value: val1
            - name: key1
              value: val2
          image: nginx
          name: init
