modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/container-duplicates/rendered/test_samples/pods/007-example-disallowed-init-containers-same-name.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-init-containers-same-name
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    initContainers:
        - image: nginx
          name: init
        - image: nginx:1.27
          name: init
