modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/container-duplicates/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8containerduplicates
tests:
  - name: operation-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: example-allowed
        object: test_samples/pods/001-example-allowed.yaml
        assertions:
          - violations: "no"
      - name: example-disallowed
        object: test_samples/pods/002-example-disallowed.yaml
        assertions:
          - message: 'Pod <disallowed> has duplicated container names: ''nginx'''
            violations: "yes"
      - name: example-allowed-envs-same-name-diff-containers
        object: test_samples/pods/003-example-allowed-envs-same-name-diff-containers.yaml
        assertions:
          - violations: "no"
      - name: example-disallowed-envs-same-name-same-container
        object: test_samples/pods/004-example-disallowed-envs-same-name-same-container.yaml
        assertions:
          - message: 'Container <nginx> in pod <disallowed> has duplicated env variable names: ''key1'''
            violations: "yes"
      - name: example-allowed-init-envs-same-name-diff-containers
        object: test_samples/pods/005-example-allowed-init-envs-same-name-diff-containers.yaml
        assertions:
          - violations: "no"
      - name: example-disallowed-init-envs-same-name-same-container
        object: test_samples/pods/006-example-disallowed-init-envs-same-name-same-container.yaml
        assertions:
          - message: 'Container <init> in pod <disallowed-init-envs-same-name-same-container> has duplicated env variable names: ''key1'''
            violations: "yes"
      - name: example-disallowed-init-containers-same-name
        object: test_samples/pods/007-example-disallowed-init-containers-same-name.yaml
        assertions:
          - message: 'Pod <disallowed-init-containers-same-name> has duplicated container names: ''init'''
            violations: "yes"
